add some images and edit some fils

--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
             <img alt="Logo" src="assets/images/logo.png" />
           </a>
           <div class="menu">
-            <a class="active" href="about.html">About </a>
-            <a href="/#projects"> Projects </a> <a href="#"> Contact </a>
+            <a class="active" href="#">About </a>
+            <a href="/#projects"> Projects </a> <a id="contact-btn" href="#contact"> Contact </a>
             <div class="social-icons">
               <a href="#"> <i class="fab fa-facebook-f"> </i> </a>
               <a href="#"> <i class="fab fa-twitter"> </i> </a>
@@ -37,10 +37,7 @@
           <h2>About Us</h2>
         </div>
         <div class="image-container">
-          <img
-            src="https://media.istockphoto.com/id/1461320320/photo/female-video-game-designer-works-on-a-new-3d-level-on-personal-computer-focused-woman.jpg?s=2048x2048&w=is&k=20&c=IET9RIwUaSB4oST9Mkx8cYANusmFci1KsLbWHeVJDQs="
-            alt=""
-          />
+          <img src="assets/images/image2.jpg" alt="" />
         </div>
         <div class="text-container">
           <p>
@@ -97,10 +94,7 @@
         <div class="story-container">
           <div class="story-box">
             <div class="story-image">
-              <img
-                src="https://media.istockphoto.com/id/909955362/photo/female-architect-at-work.jpg?s=2048x2048&w=is&k=20&c=4ZU1UgaSP3iPDH6VP-tF99r6Gw4e_5iLR8Zs0pNJiiU="
-                alt=""
-              />
+              <img src="assets/images/image3.jpg" alt="" />
             </div>
             <div class="story-text">
               <h2>Our Story</h2>
@@ -124,8 +118,25 @@
             </div>
           </div>
         </div>
+        <div class="story-container">
+          <div class="story-box">
+            <div class="story-image">
+              <img src="assets/images/image4.jpg" alt="" />
+            </div>
+            <div class="story-text">
+              <h2>Our Creative Team</h2>
+              <p>
+                Our studio is made up of talented animators, designers,
+                storytellers, and developers, all dedicated to creating
+                high-quality educational content. Each member of our team brings
+                their unique skills and passion to every project, ensuring we
+                deliver the best learning experiences possible.
+              </p>
+            </div>
+          </div>
+        </div>
         <div class="team-container" id="introduction">
-          <h1>Our Team</h1>
+          <!-- <h1>Our Team</h1> -->
           <div class="services">
             <div class="service">
               <img src="assets/images/girl-icon.png" alt="" />
@@ -147,6 +158,52 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="footer-cont">
+        <div>
+          <h3>Dada Studio</h3>
+          <p>
+            Creating Engaging Educational Experiences Through Animation and
+            Augmented Reality
+          </p>
+        </div>
+
+        <div>
+          <h3>Social Links</h3>
+
+          <div class="social-icons">
+            <a target="_blank" href="https://www.instagram.com/dede_studios/"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a target="_blank" href="https://www.tiktok.com/@bethmolla"
+              ><i class="fab fa-tiktok"></i
+            ></a>
+            <a target="_blank" href="https://www.youtube.com/@dedestudios6610"
+              ><i class="fab fa-youtube"></i
+            ></a>
+
+            <a target="_blank" href="#"><i class="fab fa-facebook"></i></a>
+            <a target="_blank" href="#"><i class="fab fa-x"></i></a>
+          </div>
+        </div>
+        <div id="contact">
+          <h3>Contact Us</h3>
+
+          <p>
+            <i class="fa fa-phone"></i>
+            <a href="tel:+2519234567">+251034343</a>
+          </p>
+          <p>
+            <i class="fa fa-at"></i>
+            <a href="mailto:contact@site.com">contact@site.com</a>
+          </p>
+        </div>
+      </div>
+    </footer>
+    <div class="footer-bottom">
+      <p>© 2024 Dada Studio</p>
+    </div>
+  </div>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
