--- a/index.html
+++ b/index.html
@@ -40,10 +40,17 @@
           </a>
           <div class="menu">
             <a href="about.html"> About </a> <a href="#projects"> Projects </a>
-            <a href="#"> Contact </a>
+            <a id="contact-btn" href="#contact"> Contact </a>
             <div class="social-icons">
-              <a href="#"> <i class="fab fa-facebook-f"> </i> </a>
-              <a href="#"> <i class="fab fa-twitter"> </i> </a>
+              <a href="https://www.instagram.com/dede_studios/" target="_blank">
+                <i class="fab fa-instagram"> </i>
+              </a>
+              <a
+                target="_blank"
+                href="https://www.youtube.com/@dedestudios6610"
+              >
+                <i class="fab fa-youtube"> </i>
+              </a>
             </div>
           </div>
           <i class="bar fa fa-bars" aria-hidden="true"></i>
@@ -57,6 +64,7 @@
             muted
             src="assets/videos/hero-video.mp4"
             playsinline
+            id="heror-video"
           ></video>
           <div class="text-animation">
             <h1>Welcome to Dede Animation Studio</h1>
@@ -152,19 +160,7 @@
             </div>
           </div>
         </div>
-        <div id="projects" class="project-container">
-          <div class="iframe-container">
-            <iframe
-              height="355"
-              src="https://www.youtube-nocookie.com/embed/FKCmexqxKVE?si=uIQoYEG0qzvZnsJ-"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
+
         <div class="image-list-container">
           <div class="image">
             <video
@@ -194,18 +190,7 @@
         </div>
         <div class="image-list-container">
           <div class="image">
-            <video
-              alt="People discussing in front of a screen"
-              height="300"
-              src="assets/videos/hero-video.mp4"
-              muted
-              loop
-              poster="https://images.unsplash.com/photo-1609921212029-bb5a28e60960?q=80&w=2052&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              width="450"
-            ></video>
-            <button>
-              <i class="fa-solid fa-play"></i>
-            </button>
+            <img src="assets/images/20180925_164051.jpg" alt="" />
           </div>
 
           <div class="content">
@@ -248,9 +233,23 @@
             <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
           </div>
         </div>
-
+        <div id="projects" class="project-container">
+          <div class="iframe-container">
+            <iframe
+              height="355"
+              src="https://www.youtube-nocookie.com/embed/FKCmexqxKVE?si=uIQoYEG0qzvZnsJ-"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
         <div class="work-withus-container">
-          <div class="image-cont"><img src="" alt="" srcset="" /></div>
+          <div class="image-cont">
+            <img src="" alt="" srcset="" />
+          </div>
           <div class="text-section">
             <span>
               <h2>Why Work With Us</h2>
@@ -349,21 +348,31 @@
             <h3>Social Links</h3>
 
             <div class="social-icons">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-pinterest"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a target="_blank" href="https://www.instagram.com/dede_studios/"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a target="_blank" href="https://www.tiktok.com/@bethmolla"
+                ><i class="fab fa-tiktok"></i
+              ></a>
+              <a target="_blank" href="https://www.youtube.com/@dedestudios6610"
+                ><i class="fab fa-youtube"></i
+              ></a>
+
+              <a target="_blank" href="#"><i class="fab fa-facebook"></i></a>
+              <a target="_blank" href="#"><i class="fab fa-x"></i></a>
             </div>
           </div>
-          <div>
+          <div id="contact">
             <h3>Contact Us</h3>
 
             <p>
-              We would love to hear from you! Whether you’re interested in our
-              products, have questions about our services, or want to
-              collaborate, feel free to reach out to us.
+              <i class="fa fa-phone"></i>
+              <a href="tel:+2519234567">+251034343</a>
             </p>
-            <p><a href="mailto:contact@site.com">contact@site.com</a></p>
+            <p>
+              <i class="fa fa-at"></i>
+              <a href="mailto:contact@site.com">contact@site.com</a>
+            </p>
           </div>
         </div>
       </footer>
