--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
     <div class="container">
       <header>
         <nav class="navbar">
-          <a href="/" class="logo">
+          <a href="index.html" class="logo">
             <img alt="Logo" src="assets/images/logo.png" />
           </a>
           <div class="menu">
             <a class="active" href="#">About </a>
-            <a href="/#projects"> Projects </a> <a id="contact-btn" href="#contact"> Contact </a>
+            <a href="index.html#projects"> Projects </a> <a id="contact-btn" href="#contact"> Contact </a>
             <div class="social-icons">
               <a href="#"> <i class="fab fa-facebook-f"> </i> </a>
               <a href="#"> <i class="fab fa-twitter"> </i> </a>
