--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
       <header>
         <nav class="navbar">
-          <a href="/" class="logo">
+          <a href="index.html" class="logo">
             <img alt="Logo" src="assets/images/logo.png" />
           </a>
           <div class="menu">
@@ -351,15 +351,16 @@
               <a target="_blank" href="https://www.instagram.com/dede_studios/"
                 ><i class="fab fa-instagram"></i
               ></a>
-              <a target="_blank" href="https://www.tiktok.com/@bethmolla"
+              <a target="_blank" href="https://www.tiktok.com/@dedestudios"
                 ><i class="fab fa-tiktok"></i
               ></a>
               <a target="_blank" href="https://www.youtube.com/@dedestudios6610"
                 ><i class="fab fa-youtube"></i
               ></a>
 
-              <a target="_blank" href="#"><i class="fab fa-facebook"></i></a>
-              <a target="_blank" href="#"><i class="fab fa-x"></i></a>
+              <a target="_blank" href="https://web.facebook.com/@dedeanimation"
+                ><i class="fab fa-facebook"></i
+              ></a>
             </div>
           </div>
           <div id="contact">
