--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
         </div>
 
         <div class="team-container client" id="introduction">
-          <h1>Clients</h1>
+          <h1>Clients Testimonials</h1>
           <div class="services">
             <div class="service">
-              <img src="assets/images/girl-icon.png" alt="" />
+              <img src="assets/images/beminat.jpg" alt="" />
               <br />
 
-              <a href="">Bemnet Yemesgen</a>
+              <a>Bemnet Yemesgen</a>
               <p>
                 "Dede is a fantastic art studio to work with. They have great
                 attitude and their work is fun as well as thoughtful."
@@ -294,20 +294,9 @@
               <h3>Girl Effect, Brand Director</h3>
             </div>
             <div class="service">
-              <img src="assets/images/girl-icon.png" alt="" />
+              <img src="assets/images/Yves.jpg" alt="" />
               <br />
-
-              <p>
-                "We have had the pleasure of working with Dede studios on a
-                couple of projects. We had hard deadlines and through their
-                day-and-night dedicated approach, we were able to receive a
-                first-class work from Dede"
-              </p>
-              <h3>Girl Effect, Brand Director</h3>
-            </div>
-            <div class="service">
-              <img src="assets/images/girl-icon.png" alt="" />
-              <br />
+              <a>Yves de Saint Priest</a>
 
               <p>
                 "Looking to make a set of posters for farmers’ training, Dede
@@ -315,20 +304,22 @@
                 an advisor. The drawings realized, the design, the follow up,
                 everything was very professional. It was a fruitful
                 collaboration and the farmers’ feedbacks have been very positive
-                !"
+                ! "
               </p>
               <h3>Barley Expert – Boortmalt Ethiopia</h3>
             </div>
             <div class="service">
-              <img src="assets/images/girl-icon.png" alt="" />
-              <a href="">Bemnet Yemesgen</a>
+              <img src="assets/images/Yodahe.jpg" alt="" />
               <br />
+              <a>Yodahe Zemichael</a>
 
               <p>
-                "Dede is a fantastic art studio to work with. They have great
-                attitude and their work is fun as well as thoughtful."
+                "We have had the pleasure of working with Dede studios on a
+                couple of projects. We had hard deadlines and through their
+                day-and-night dedicated approach, we were able to receive a
+                first-class work from Ded"
               </p>
-              <h3>Girl Effect, Brand Director</h3>
+              <h3>Office of the Prime Minister</h3>
             </div>
           </div>
         </div>
