--- a/about.html
+++ b/about.html
@@ -22,11 +22,18 @@
             <img alt="Logo" src="assets/images/logo.png" />
           </a>
           <div class="menu">
-            <a class="active" href="#">About </a>
-            <a href="index.html#projects"> Projects </a> <a id="contact-btn" href="#contact"> Contact </a>
+            <a href="about.html"> About </a> <a href="index.html#projects"> Projects </a>
+            <a id="contact-btn" href="contact"> Contact </a>
             <div class="social-icons">
-              <a href="#"> <i class="fab fa-facebook-f"> </i> </a>
-              <a href="#"> <i class="fab fa-twitter"> </i> </a>
+              <a href="https://www.instagram.com/dede_studios/" target="_blank">
+                <i class="fab fa-instagram"> </i>
+              </a>
+              <a
+                target="_blank"
+                href="https://www.youtube.com/@dedestudios6610"
+              >
+                <i class="fab fa-youtube"> </i>
+              </a>
             </div>
           </div>
           <i class="bar fa fa-bars" aria-hidden="true"></i>
@@ -175,15 +182,16 @@
             <a target="_blank" href="https://www.instagram.com/dede_studios/"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a target="_blank" href="https://www.tiktok.com/@bethmolla"
+            <a target="_blank" href="https://www.tiktok.com/@dedestudios"
               ><i class="fab fa-tiktok"></i
             ></a>
             <a target="_blank" href="https://www.youtube.com/@dedestudios6610"
               ><i class="fab fa-youtube"></i
             ></a>
 
-            <a target="_blank" href="#"><i class="fab fa-facebook"></i></a>
-            <a target="_blank" href="#"><i class="fab fa-x"></i></a>
+            <a target="_blank" href="https://web.facebook.com/@dedeanimation"
+              ><i class="fab fa-facebook"></i
+            ></a>
           </div>
         </div>
         <div id="contact">
