modify some file and add images

--- a/about.html
+++ b/about.html
@@ -3,13 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About DEDE</title>
+    <meta name="title" content="Dede Animation Studio  " />
+    <meta
+      name="description"
+      content="Creating Engaging Educational Experiences Through Animation and Augmented Reality"
+    />
+    <meta name="author" content="Mintesnot Yesmashewa" />
+    <meta
+      name="keywords"
+      content="animation, augmented reality, education, creativity"
+    />
+    <meta name="copyright" content="Dede Animation Studio" />
+    <title>ABAOUT DEDE-STUDIO</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
       integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+    />
+    <link rel="icon" type="image/x-icon" href="assets/images/logo.png" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap"
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -22,8 +39,8 @@
             <img alt="Logo" src="assets/images/logo.png" />
           </a>
           <div class="menu">
-            <a href="about.html"> About </a> <a href="index.html#projects"> Projects </a>
-            <a id="contact-btn" href="contact"> Contact </a>
+            <a href="about.html#"> About </a> <a href="index.html#projects"> Projects </a>
+            <a id="contact-btn" href="#contact"> Contact </a>
             <div class="social-icons">
               <a href="https://www.instagram.com/dede_studios/" target="_blank">
                 <i class="fab fa-instagram"> </i>
@@ -43,10 +60,10 @@
         <div class="about-header">
           <h2>About Us</h2>
         </div>
-        <div class="image-container">
+        <div class="image-container card-animation">
           <img src="assets/images/image2.jpg" alt="" />
         </div>
-        <div class="text-container">
+        <div class="text-container card-animation ">
           <p>
             Creating Engaging Educational Experiences Through Animation and
             Augmented Reality
@@ -71,7 +88,7 @@
           </p>
         </div>
         <div class="mission-vision-container">
-          <div class="service-box">
+          <div class="service-box card-animation">
             <div class="icon"><i class="fa fa-check"></i></div>
             <div class="content">
               <h3>Our Mission</h3>
@@ -86,7 +103,7 @@
             </div>
           </div>
 
-          <div class="service-box">
+          <div class="service-box card-animation">
             <div class="icon"><i class="fa fa-globe"></i></div>
             <div class="content">
               <h3>Our Vision</h3>
@@ -98,12 +115,12 @@
             </div>
           </div>
         </div>
-        <div class="story-container">
+        <div class="story-container ">
           <div class="story-box">
-            <div class="story-image">
+            <div class="story-image card-animation">
               <img src="assets/images/image3.jpg" alt="" />
             </div>
-            <div class="story-text">
+            <div class="story-text card-animation">
               <h2>Our Story</h2>
               <p>
                 Dede Animation Studio was founded in 2016 by Bethelhem, a
@@ -125,12 +142,12 @@
             </div>
           </div>
         </div>
-        <div class="story-container">
+        <div class="story-container ">
           <div class="story-box">
-            <div class="story-image">
+            <div class="story-image card-animation">
               <img src="assets/images/image4.jpg" alt="" />
             </div>
-            <div class="story-text">
+            <div class="story-text card-animation">
               <h2>Our Creative Team</h2>
               <p>
                 Our studio is made up of talented animators, designers,
@@ -146,11 +163,11 @@
           <!-- <h1>Our Team</h1> -->
           <div class="services">
             <div class="service">
-              <img src="assets/images/girl-icon.png" alt="" />
+              <img src="assets/images/bethe.PNG" class="card-animation" alt="" />
               <br />
 
-              <a href="">Bethelhem Molla</a>
-              <p>
+              <a  >Bethelhem Molla</a>
+              <p class="card-animation">
                 Bethelhem is a passionate designer, animator, and educational
                 innovator. With a degree from Addis Ababa University’s Alle
                 School of Fine Arts and Design, she founded Dede Animation
@@ -161,17 +178,40 @@
               </p>
               <h3>Founder & CEO</h3>
             </div>
+            <div class="service">
+              <img src="assets/images/addisalem.jpg" class="card-animation" alt="" />
+              <br />
+
+              <a >Addisalem kiros</a>
+              <p class="card-animation">
+                Addisalem is a skilled and professional graphic designer at Dede Studios, known for her expertise in creating visually compelling designs. Her work likely spans a variety of design fields, including branding, digital art, and media production, contributing to the studio’s overall creative output. 
+              </p>
+              <h3>Graphic Designer</h3>
+            </div>
+            <div class="service">
+              <img src="assets/images/Maereg.jpg" class="card-animation" alt="" />
+              <br />
+
+              <a >Maereg kassaw</a>
+              <p class="card-animation">
+                Maereg is the marketing manager at Dede Studios, responsible for overseeing and executing marketing strategies to promote the studio’s brand and services. With a focus on growth and visibility, Maereg likely manages campaigns, social media presence, client relationships, and market research to drive business success for the studio.              </p>
+              <h3>Marketing Manager</h3>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+   
     <footer>
       <div class="footer-cont">
         <div>
-          <h3>Dada Studio</h3>
+          <h3>Dede Studio</h3>
           <p>
-            Creating Engaging Educational Experiences Through Animation and
-            Augmented Reality
+            At Dede Animation Studio, we’re not just telling stories; we’re
+            creating learning experiences that last a lifetime. Join us on a
+            journey of discovery and creativity, and let’s make learning fun
+            together!
           </p>
         </div>
 
@@ -199,18 +239,19 @@
 
           <p>
             <i class="fa fa-phone"></i>
-            <a href="tel:+2519234567">+251034343</a>
+            <a href="tel:+251935316893">+251 935316893</a>
           </p>
           <p>
             <i class="fa fa-at"></i>
-            <a href="mailto:contact@site.com">contact@site.com</a>
+            <a href="mailto:betmolladede@gmail.com">betmolladede@gmail.com</a>
           </p>
         </div>
       </div>
     </footer>
     <div class="footer-bottom">
-      <p>© 2024 Dada Studio</p>
+      <p>© 2024 Dede Studio</p>
     </div>
+
   </div>
     <script src="assets/js/script.js"></script>
   </body>
