--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <div class="card-container" id="introduction">
           <h1>Our service</h1>
           <div class="services">
-            <div class="service">
-              <i class="fa-solid fa-vr-cardboard"></i>
+            <div class="service card-animation">
+              <i class="fa-solid fa-vr-cardboard ar-animai"></i>
               <h3>Augmented Reality</h3>
               <p>
                 By combining our animated books with AR technology, we bring
@@ -85,20 +85,21 @@
               </p>
             </div>
 
-            <div class="service">
-              <i class="fas fa-paint-brush"></i>
+            <div class="service card-animation">
+              <i class="fas fa-book-open pen-animai"></i>
               <h3>Interactive Storybooks</h3>
               <p>
                 Fun, educational books with animation and interactive AR
                 elements.
               </p>
             </div>
-            <div class="service">
-              <i class="fa"> 2D</i>
+            <div class="service card-animation">
+              <i class="fa twod-animai"> 2D</i>
               <h3>2D Animation</h3>
               <p>
-                Fun, educational books with animation and interactive AR
-                elements.
+                AugmentaKids will combine traditional 2D animation with the
+                immersive capabilities of Augmented Reality (AR) to deliver an
+                innovative and engaging educational experience.
               </p>
             </div>
           </div>
@@ -122,7 +123,7 @@
                   <i class="fa-solid fa-play"></i>
                 </button>
               </div>
-              <p>
+              <p class="card-animation">
                 <a href=""> Butuye(ቡጡዬ) </a> - Butuye is a captivating 2D
                 animated kids’ show designed to educate and entertain young
                 viewers by exploring a variety of fascinating topics in every
@@ -138,17 +139,18 @@
                   width="300"
                 />
               </div>
-              <p>
-                <a href=""> Yetateyana Tsegur (የታቲያና ጸጉር) </a> - A space-themed
-                educational storybook where children can learn about the solar
-                system, galaxies, and the wonders of space through animated
-                characters and AR experiences
+              <p class="card-animation">
+                <a href=""> Yetateyana Tsegur (የታቲያና ጸጉር) </a> - StoryTime AR-
+                Interactive, immersive storybook app designed for children,
+                combining animated storytelling with Augmented Reality (AR)
+                technology. The app, “StoryTime AR,” will allow children to
+                engage with beloved stories in a novel, interactive way.
               </p>
             </div>
             <div class="project">
               <div class="vid-cont">
                 <img height="200" src="assets/images/mender.jpg" width="300" />
-                <p>
+                <p class="card-animation">
                   <a href=""> Mender (መንደር) </a> - In the vibrant town of
                   Mender, the eccentric yet lovable family of Dashe and Ete,
                   along with their three kids and their witty maid Bilcha,
@@ -177,7 +179,7 @@
               <i class="fa-solid fa-play"></i>
             </button>
           </div>
-          <div class="content">
+          <div class="content card-animation">
             <h1>Augmented Reality Experiences</h1>
             <p>
               We create AR experiences that bring education to life. Through
@@ -185,7 +187,7 @@
               it’s by solving puzzles, interacting with animated characters, or
               exploring new concepts in a hands-on way.
             </p>
-            <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
+            <!-- <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a> -->
           </div>
         </div>
         <div class="image-list-container">
@@ -193,7 +195,7 @@
             <img src="assets/images/20180925_164051.jpg" alt="" />
           </div>
 
-          <div class="content">
+          <div class="content card-animation">
             <h1>Educational Storybook Creation</h1>
             <p>
               We specialize in developing illustrated, animated storybooks that
@@ -201,12 +203,12 @@
               features to bring characters and scenes to life, allowing children
               to explore stories in a whole new way.
             </p>
-            <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
+            <!-- <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a> -->
           </div>
         </div>
 
         <div class="image-list-container">
-          <div class="image">
+          <div class="image card-animation">
             <video
               alt="People discussing in front of a screen"
               height="300"
@@ -221,7 +223,7 @@
               <i class="fa-solid fa-play"></i>
             </button>
           </div>
-          <div class="content">
+          <div class="content card-animation">
             <h1>Custom Educational Content</h1>
             <p>
               Whether you are a school, library, or organization, we offer
@@ -230,7 +232,7 @@
               personalized content that supports your curriculum and engages
               your audience.
             </p>
-            <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
+            <!-- <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a> -->
           </div>
         </div>
         <div id="projects" class="project-container">
@@ -246,11 +248,65 @@
             ></iframe>
           </div>
         </div>
+
+        <div class="team-container client" id="introduction">
+          <h1>Clients Testimonials</h1>
+          <div class="services">
+            <div class="service">
+              <img
+                src="assets/images/beminat.jpg"
+                class="card-animation"
+                alt=""
+              />
+              <br />
+
+              <a>Bemnet Yemesgen</a>
+              <p class="card-animation">
+                "Dede is a fantastic art studio to work with. They have great
+                attitude and their work is fun as well as thoughtful."
+              </p>
+              <p>Girl Effect, Brand Director</p>
+            </div>
+            <div class="service">
+              <img src="assets/images/Yves.jpg" class="card-animation" alt="" />
+              <br />
+              <a>Yves de Saint Priest</a>
+
+              <p class="card-animation">
+                "Looking to make a set of posters for farmers’ training, Dede
+                Studio has not been only a very good graphic designer, but also
+                an advisor. The drawings realized, the design, the follow up,
+                everything was very professional. It was a fruitful
+                collaboration and the farmers’ feedbacks have been very positive
+                ! "
+              </p>
+              <p>Barley Expert – Boortmalt Ethiopia</p>
+            </div>
+            <div class="service">
+              <img
+                src="assets/images/Yodahe.jpg"
+                class="card-animation"
+                alt=""
+              />
+              <br />
+              <a>Yodahe Zemichael</a>
+
+              <p>
+                "We have had the pleasure of working with Dede studios on a
+                couple of projects. We had hard deadlines and through their
+                day-and-night dedicated approach, we were able to receive a
+                first-class work from Ded"
+              </p>
+              <p>Office of the Prime Minister</p>
+            </div>
+          </div>
+        </div>
+
         <div class="work-withus-container">
           <div class="image-cont">
             <img src="" alt="" srcset="" />
           </div>
-          <div class="text-section">
+          <div class="text-section card-animation">
             <span>
               <h2>Why Work With Us</h2>
 
@@ -278,60 +334,17 @@
             </span>
           </div>
         </div>
-
-        <div class="team-container client" id="introduction">
-          <h1>Clients Testimonials</h1>
-          <div class="services">
-            <div class="service">
-              <img src="assets/images/beminat.jpg" alt="" />
-              <br />
-
-              <a>Bemnet Yemesgen</a>
-              <p>
-                "Dede is a fantastic art studio to work with. They have great
-                attitude and their work is fun as well as thoughtful."
-              </p>
-              <h3>Girl Effect, Brand Director</h3>
-            </div>
-            <div class="service">
-              <img src="assets/images/Yves.jpg" alt="" />
-              <br />
-              <a>Yves de Saint Priest</a>
-
-              <p>
-                "Looking to make a set of posters for farmers’ training, Dede
-                Studio has not been only a very good graphic designer, but also
-                an advisor. The drawings realized, the design, the follow up,
-                everything was very professional. It was a fruitful
-                collaboration and the farmers’ feedbacks have been very positive
-                ! "
-              </p>
-              <h3>Barley Expert – Boortmalt Ethiopia</h3>
-            </div>
-            <div class="service">
-              <img src="assets/images/Yodahe.jpg" alt="" />
-              <br />
-              <a>Yodahe Zemichael</a>
-
-              <p>
-                "We have had the pleasure of working with Dede studios on a
-                couple of projects. We had hard deadlines and through their
-                day-and-night dedicated approach, we were able to receive a
-                first-class work from Ded"
-              </p>
-              <h3>Office of the Prime Minister</h3>
-            </div>
-          </div>
-        </div>
       </main>
 
       <footer>
         <div class="footer-cont">
           <div>
-            <h3>Dada Studio</h3>
+            <h3>Dede Studio</h3>
             <p>
-              Creating Engaging Educational Experiences Through Animation and
-              Augmented Reality
+              At Dede Animation Studio, we’re not just telling stories; we’re
+              creating learning experiences that last a lifetime. Join us on a
+              journey of discovery and creativity, and let’s make learning fun
+              together!
             </p>
           </div>
 
@@ -359,17 +372,17 @@
 
             <p>
               <i class="fa fa-phone"></i>
-              <a href="tel:+2519234567">+251034343</a>
+              <a href="tel:+251935316893">+251 935316893</a>
             </p>
             <p>
               <i class="fa fa-at"></i>
-              <a href="mailto:contact@site.com">contact@site.com</a>
+              <a href="mailto:betmolladede@gmail.com">betmolladede@gmail.com</a>
             </p>
           </div>
         </div>
       </footer>
       <div class="footer-bottom">
-        <p>© 2024 Dada Studio</p>
+        <p>© 2024 Dede Studio</p>
       </div>
     </div>
     <script src="assets/js/script.js"></script>
