update some videos file and edit about.html

--- a/about.html
+++ b/about.html
@@ -163,7 +163,7 @@
           <!-- <h1>Our Team</h1> -->
           <div class="services">
             <div class="service">
-              <img src="assets/images/bethe.PNG" class="card-animation" alt="" />
+              <img src="assets/images/bethe.jpg" class="card-animation" alt="" />
               <br />
 
               <a  >Bethelhem Molla</a>
